# my-conda-template

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  README.md  compatibility_check.sh  environment.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: black.yml  black_test.yml  code_test.yml
notebooks/: exploratory_analysis.ipynb
scripts/: cat.sh  cli.py  compatibility_check.sh  generate_wrapper.sh  tree.sh
src/: __init__.py  app.py  config.py
src/data/: __init__.py
src/models/: __init__.py
src/services/: __init__.py
src/utils/: __init__.py
tests/: conftest.py  test_app.py
