[tool.poetry]
name = "ai-rag-project"
version = "0.1.0"
description = "AI RAG Project"
authors = ["Daniel Lomeli <daniel@farpointcommunications.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4" # (3.9)
pandas = "^2.2.1" # (3.9)
scipy = "^1.12.0" # (3.9)
scikit-learn = "^1.4.1.post1" # (3.9)
matplotlib = "^3.8.3" # (3.9)
seaborn = "^0.13.2" # (3.8)
jupyter = "^1.0.0" # (null)
ipykernel = "^6.29.4" # (3.8)
ipywidgets = "^8.1.2" # (3.7)
tqdm = "^4.66.2" # (3.7)
torch = "^2.2.2" # (3.8)
torchvision = "^0.17.2" # (3.8)
torchaudio = "^2.2.2" # (null)
transformers = "^4.39.1" # (3.8)
datasets = "^2.18.0" # (3.8)
langchain = "^0.1.13" # (3.8)
chromadb = "^0.4.24" # (3.8)
sentence-transformers = "^2.6.1" # (3.8)
faiss-cpu = "^1.8.0" # (3.8)
prefect = "^2.16.6" # (3.8)
python-dotenv = "^1.0.1" # (3.8) 

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.15.0"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.conda
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"